homelab_k8s-build/cluster-backup/portainer-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      field.cattle.io/publicEndpoints: '[{"port":30778,"protocol":"TCP","serviceName":"portainer:portainer-agent","allNodes":true}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"portainer-agent","namespace":"portainer"},"spec":{"selector":{"matchLabels":{"app":"portainer-agent"}},"template":{"metadata":{"labels":{"app":"portainer-agent"}},"spec":{"containers":[{"env":[{"name":"LOG_LEVEL","value":"DEBUG"},{"name":"AGENT_CLUSTER_ADDR","value":"portainer-agent-headless"},{"name":"KUBERNETES_POD_IP","valueFrom":{"fieldRef":{"fieldPath":"status.podIP"}}}],"image":"portainer/agent:2.39.2" [...]
    creationTimestamp: "2026-05-09T17:47:26Z"
    generation: 2
    name: portainer-agent
    namespace: portainer
    resourceVersion: "594562"
    uid: c37bce3d-301d-4c54-8152-4d1b143ef807
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: portainer-agent
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: portainer-agent
      spec:
        containers:
        - env:
          - name: LOG_LEVEL
            value: DEBUG
          - name: AGENT_CLUSTER_ADDR
            value: portainer-agent-headless
          - name: KUBERNETES_POD_IP
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: status.podIP
          image: portainer/agent:2.39.2
          imagePullPolicy: Always
          name: portainer-agent
          ports:
          - containerPort: 9001
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: portainer-sa-clusteradmin
        serviceAccountName: portainer-sa-clusteradmin
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-05-09T17:47:26Z"
      lastUpdateTime: "2026-05-09T17:47:33Z"
      message: ReplicaSet "portainer-agent-69b84755f4" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-05-31T15:51:49Z"
      lastUpdateTime: "2026-05-31T15:51:49Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    terminatingReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
